about link changed

--- a/index.html
+++ b/index.html
@@ -578,7 +578,8 @@
                         <a href="#" onclick="window.open('https://contact.babblsoft.com', '_blank')" class="text-gray-300 hover:text-white transition-colors">Contact</a>
                         <a href="#" onclick="window.open('https://trademark.babblsoft.com', '_blank')" class="text-gray-300 hover:text-white transition-colors">Trademark Info</a>
                         <a href="#" onclick="window.open('https://about.babblsoft.com', '_blank')" class="text-gray-300 hover:text-white transition-colors">About Babbl</a>
-                        <a href="#" onclick="window.open('https://cookies.babblsoft.com', '_blank')" class="text-gray-300 hover:text-white transition-colors">Cookie Policy</a>
+                        <a href="#" onclick="window.open(<a href="https://about.babblsoft.com">About</a>
+)" class="text-gray-300 hover:text-white transition-colors">Cookie Policy</a>
                         <a href="#" onclick="window.open('https://career.babblsoft.com', '_blank')" class="text-gray-300 hover:text-white transition-colors">Career</a>
                     </div>
                     <div class="text-gray-400">
